--- a/public/app/View/inicio.html
+++ b/public/app/View/inicio.html
@@ -1,1 +1,12 @@
-<button class="btn btn-primary">Hola</button>
+<div class="container-fluid">
+	<div class="row">
+		<nav class="navbar barra col-12">
+			<h1 class="navbar-brand white">CompraMÉsta</h1>
+			<form class="form-inline">
+				<input class="form-control mr-sm-2 col-6" type="search" placeholder="Search" aria-label="Search">
+				<i class="fa fa-user-circle fa-3x white col-3"></i>
+				<i class="fa fa-shopping-cart fa-3x white col-3"></i>
+			</form>
+		</nav>
+	</div>
+</div>
